tests/paczka1/fuzzy1/38658152.err
Error in line 14: XIeiRqbOi S536 85,2
Error in line 23: A289 S536 81,2
Error in line 22: XIeiRqbOi A281 63,1
Error in line 25: njaXWcj A545 0,9
